--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -3,5 +3,4 @@
     android:id="@+id/recycler_movies"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clipToPadding="false"
-    android:padding="@dimen/recycler_margin" />
+    android:clipToPadding="false" />
