--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -20,6 +20,7 @@
         android:textStyle="bold"
         android:textSize="28sp"
         android:layout_margin="12dp"
+        android:textColor="@color/white"
         android:gravity="end"/>
 
 </RelativeLayout>
